projects/styles/src/typography.css
[nve-text~='display'],
[nve-text~='heading'],
[nve-text~='body'],
[nve-text~='label'],
[nve-text~='eyebrow'],
[nve-text~='list'],
[nve-text~='list'] li {
  font-family: var(--nve-ref-font-family) !important;
  font-weight: var(--nve-ref-font-weight-regular) !important;
  color: var(--nve-sys-text-color) !important;
  white-space: initial;
  margin: 0;
}

[nve-text~='display'],
[nve-text~='heading'],
[nve-text~='body'],
[nve-text~='label'],
[nve-text~='link'],
[nve-text~='code'] {
  text-box: trim-both cap alphabetic;
  outline: var(--nve-debug-typography-outline, initial);
}

@supports not (text-box: trim-both cap alphabetic) {
  /* https://seek-oss.github.io/capsize/ (firefox) */
  [nve-text] {
    --__capsize-offset: -0.1818em;
  }

  :is([nve-text~='display'], [nve-text~='heading'], [nve-text~='body'], [nve-text~='label'])::before {
    content: '';
    margin-bottom: var(--__capsize-offset);
    display: table;
  }

  :is([nve-text~='display'], [nve-text~='heading'], [nve-text~='body'], [nve-text~='label'])[nve-text]::after {
    content: '';
    margin-top: var(--__capsize-offset);
    display: table;
  }

  [nve-text~='trim:none']::before,
  [nve-text~='trim:none']::after {
    content: none !important;
  }

  [nve-text~='truncate'] {
    &::after {
      --__capsize-offset: 0;
    }
  }
}

[nve-text~='display'] {
  font-size: var(--nve-ref-font-size-1000) !important;

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-1200) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-1100) !important;
  }

  &[nve-text~='sm'] {
    font-size: var(--nve-ref-font-size-900) !important;
  }
}

[nve-text~='heading'] {
  font-size: var(--nve-ref-font-size-400) !important;

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-600) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-500) !important;
  }

  &[nve-text~='sm'] {
    font-size: var(--nve-ref-font-size-300) !important;
  }

  &[nve-text~='xs'] {
    font-size: var(--nve-ref-font-size-200) !important;
  }
}

[nve-text~='body'] {
  font-size: var(--nve-ref-font-size-200) !important;
  font-weight: var(--nve-ref-font-weight-regular) !important;

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-400) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-300) !important;
  }

  &[nve-text~='sm'] {
    font-size: var(--nve-ref-font-size-100) !important;
  }
}

[nve-text~='label'] {
  font-size: var(--nve-ref-font-size-200) !important;
  font-weight: var(--nve-ref-font-weight-medium) !important;

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-400) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-300) !important;
  }

  &[nve-text~='sm'] {
    font-size: var(--nve-ref-font-size-100) !important;
  }
}

/* @deprecated */
[nve-text~='eyebrow'] {
  font-size: var(--nve-ref-font-size-100) !important;
  font-weight: var(--nve-ref-font-weight-semibold) !important;

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-300) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-200) !important;
  }
}

[nve-text~='list'] {
  margin: 0;
  padding: 0;
  list-style-position: inside !important;

  li {
    margin: 0 !important;
  }

  &[nve-text~='unstyled'] {
    list-style: none !important;
  }

  &[nve-text~='nav'] {
    font-size: var(--nve-ref-font-size-200);

    ul {
      margin: var(--nve-ref-size-300) 0 0;
      padding: 0;

      li {
        margin: 0 0 var(--nve-ref-size-300) var(--nve-ref-size-600) !important;
      }
    }

    li {
      padding: 0;
      list-style: none !important;
      color: var(--nve-sys-text-muted-color) !important;

      > a {
        text-decoration: none !important;
      }

      > a:not(:hover) {
        color: var(--nve-sys-text-muted-color) !important;
      }

      > a[aria-current='page'] {
        color: var(--nve-sys-text-link-hover-color) !important;
        font-weight: var(--nve-ref-font-weight-semibold) !important;
      }
    }
  }
}

[nve-text~='link'] {
  color: var(--nve-sys-text-link-color) !important;
  text-decoration: underline !important;
  line-height: inherit !important;
  width: initial !important;

  &[nve-text~='disabled'] {
    color: var(--nve-sys-text-link-disabled-color) !important;
  }

  &:visited,
  &[nve-text~='visited'] {
    color: var(--nve-sys-text-link-visited-color) !important;
  }

  &:focus-visible {
    outline: Highlight solid 2px !important;
    outline: 5px auto -webkit-focus-ring-color !important;
  }

  &[nve-text~='no-visit'] {
    color: var(--nve-sys-text-link-color) !important;
  }

  &[nve-text~='no-underline'] {
    text-decoration: none !important;
  }

  &[nve-text~='xl'] {
    font-size: var(--nve-ref-font-size-400) !important;
  }

  &[nve-text~='lg'] {
    font-size: var(--nve-ref-font-size-300) !important;
  }

  &[nve-text~='sm'] {
    font-size: var(--nve-ref-font-size-100) !important;
  }

  &[nve-text~='emphasis'] {
    color: var(--nve-sys-text-link-emphasis-color) !important;
  }

  &:hover,
  &[nve-text~='hover'] {
    color: var(--nve-sys-text-link-hover-color) !important;
  }
}

/* color */
[nve-text~='emphasis'] {
  color: var(--nve-sys-text-emphasis-color) !important;
}

[nve-text~='muted'] {
  color: var(--nve-sys-text-muted-color) !important;
}

[nve-text~='white'] {
  color: var(--nve-sys-text-white-color) !important;
}

[nve-text~='black'] {
  color: var(--nve-sys-text-black-color) !important;
}

[nve-text~='inherit'] {
  color: inherit !important;
}

/* weights */
[nve-text~='bold'] {
  font-weight: var(--nve-ref-font-weight-bold) !important;
}

[nve-text~='semibold'] {
  font-weight: var(--nve-ref-font-weight-semibold) !important;
}

[nve-text~='regular'] {
  font-weight: var(--nve-ref-font-weight-regular) !important;
}

[nve-text~='medium'] {
  font-weight: var(--nve-ref-font-weight-medium) !important;
}

[nve-text~='light'] {
  font-weight: var(--nve-ref-font-weight-light) !important;
}

/* transforms */
[nve-text~='uppercase'] {
  text-transform: uppercase !important;
}

[nve-text~='lowercase'] {
  text-transform: lowercase !important;
}

[nve-text~='capitalize'] {
  text-transform: capitalize !important;
}

/* line-heights */
[nve-text~='tight'] {
  line-height: var(--nve-ref-font-line-height-tight) !important;
}

[nve-text~='snug'] {
  line-height: var(--nve-ref-font-line-height-snug) !important;
}

[nve-text~='moderate'] {
  line-height: var(--nve-ref-font-line-height-moderate) !important;
}

[nve-text~='relaxed'] {
  line-height: var(--nve-ref-font-line-height-relaxed) !important;
}

[nve-text~='loose'] {
  line-height: var(--nve-ref-font-line-height-loose) !important;
}

[nve-text~='line-height-3'] {
  line-height: var(--nve-ref-font-line-height-300) !important;
}

[nve-text~='line-height-4'] {
  line-height: var(--nve-ref-font-line-height-400) !important;
}

[nve-text~='line-height-5'] {
  line-height: var(--nve-ref-font-line-height-500) !important;
}

[nve-text~='line-height-6'] {
  line-height: var(--nve-ref-font-line-height-600) !important;
}

[nve-text~='line-height-7'] {
  line-height: var(--nve-ref-font-line-height-700) !important;
}

[nve-text~='line-height-8'] {
  line-height: var(--nve-ref-font-line-height-800) !important;
}

[nve-text~='line-height-9'] {
  line-height: var(--nve-ref-font-line-height-900) !important;
}

[nve-text~='line-height-10'] {
  line-height: var(--nve-ref-font-line-height-1000) !important;
}

[nve-text~='start'] {
  text-align: start !important;
}

[nve-text~='center'] {
  text-align: center !important;
}

[nve-text~='end'] {
  text-align: end !important;
}

[nve-text~='truncate'] {
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  white-space: nowrap !important;
}

[nve-text~='nowrap'] {
  text-wrap: nowrap;
}

[nve-text~='code'] {
  background: var(--nve-sys-interaction-field-background) !important;
  border-radius: var(--nve-ref-border-radius-xs) !important;
  padding: var(--nve-ref-size-50) var(--nve-ref-size-100) !important;
  color: var(--nve-sys-text-color) !important;
  font-family: monospace !important;
  display: inline-block !important;
}

[nve-text~='code'][nve-text~='flat'] {
  background: transparent !important;
}

